--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-router": "^1.0.0",
     "redux": "^3.0.4",
     "redux-logger": "^2.0.4",
-    "redux-router": "^1.0.0-beta3",
+    "redux-simple-router": "0.0.8",
     "redux-thunk": "^1.0.0"
   }
 }
