--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Messing about with React and Redux.",
   "scripts": {
     "lint": "eslint src test",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "NODE_ENV=test mocha --recursive --compilers js:babel-core/register --require ./test/setup.js",
+    "test:watch": "npm test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -19,9 +21,13 @@
     "babel-eslint": "^4.1.5",
     "babel-loader": "^5.4.0",
     "babel-plugin-react-transform": "^1.1.1",
+    "deep-freeze": "0.0.1",
     "eslint": "^1.9.0",
     "eslint-plugin-react": "^3.9.0",
+    "expect": "^1.13.0",
     "express": "^4.13.3",
+    "jsdom": "^7.0.2",
+    "mocha": "^2.3.4",
     "react-transform-hmr": "^1.0.1",
     "redux-devtools": "^3.0.0-beta-3",
     "redux-devtools-dock-monitor": "^1.0.0-beta-3",
