--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expect": "^1.13.0",
     "express": "^4.13.3",
     "jsdom": "^7.0.2",
+    "lolex": "^1.3.2",
     "mocha": "^2.3.4",
     "react-transform-hmr": "^1.0.1",
     "redux-devtools": "^3.0.0-beta-3",
