--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
     "react/jsx-no-undef": 2,
     "react/jsx-uses-react": 1,
     "react/wrap-multilines": 2,
+    "semi": [2, "always"],
     "strict": 0,
     "space-before-blocks": [ 2, "always" ],
     "space-before-function-paren": [ 2, { "anonymous": "always", "named": "never" } ],
