--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsdom": "^7.0.2",
     "lolex": "^1.3.2",
     "mocha": "^2.3.4",
+    "react-addons-test-utils": "^0.14.3",
     "react-transform-hmr": "^1.0.1",
     "redux-devtools": "^3.0.0-beta-3",
     "redux-devtools-dock-monitor": "^1.0.0-beta-3",
