--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "babel-eslint": "^4.1.5",
     "babel-loader": "^5.4.0",
     "babel-plugin-react-transform": "^1.1.1",
+    "chai": "^3.4.1",
     "deep-freeze": "0.0.1",
     "eslint": "^1.9.0",
     "eslint-plugin-react": "^3.9.0",
-    "expect": "^1.13.0",
     "express": "^4.13.3",
     "jsdom": "^7.0.2",
     "lolex": "^1.3.2",
