--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "Messing about with React and Redux.",
   "scripts": {
+    "clean:cov": "rimraf coverage",
     "lint": "eslint src test",
     "start": "node server.js",
-    "test": "NODE_ENV=test mocha --recursive --compilers js:babel-core/register --require ./test/setup.js",
-    "test:watch": "npm test -- --watch"
+    "test": "npm run test:coveralls",
+    "test:spec": "NODE_ENV=test mocha --recursive --compilers js:babel-core/register --require ./test/setup.js",
+    "test:watch": "npm test:spec -- --watch",
+    "test:cov": "npm run clean:cov && babel-node node_modules/isparta/bin/isparta cover --include-all-sources --root src --report html --report lcov node_modules/mocha/bin/_mocha -- --recursive --require ./test/setup.js",
+    "test:coveralls": "npm run test:cov && cat coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
@@ -17,15 +21,18 @@
     "url": "https://github.com/tanem/react-redux-playground/issues"
   },
   "devDependencies": {
+    "babel": "^5.5.8",
     "babel-core": "^5.8.33",
     "babel-eslint": "^4.1.5",
     "babel-loader": "^5.4.0",
     "babel-plugin-react-transform": "^1.1.1",
     "chai": "^3.4.1",
+    "coveralls": "^2.11.4",
     "deep-freeze": "0.0.1",
     "eslint": "^1.9.0",
     "eslint-plugin-react": "^3.9.0",
     "express": "^4.13.3",
+    "isparta": "^3.0.3",
     "jsdom": "^7.0.2",
     "lolex": "^1.3.2",
     "mocha": "^2.3.4",
@@ -34,6 +41,7 @@
     "redux-devtools": "^3.0.0-beta-3",
     "redux-devtools-dock-monitor": "^1.0.0-beta-3",
     "redux-devtools-log-monitor": "^1.0.0-beta-3",
+    "rimraf": "^2.4.4",
     "webpack": "^1.12.6",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.5.0"
