--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "express": "^4.13.3",
     "isparta": "^3.0.3",
     "jsdom": "^7.0.2",
-    "lolex": "^1.3.2",
     "mocha": "^2.3.4",
     "react-addons-test-utils": "^0.14.3",
     "react-transform-hmr": "^1.0.1",
@@ -42,6 +41,7 @@
     "redux-devtools-dock-monitor": "^1.0.0-beta-3",
     "redux-devtools-log-monitor": "^1.0.0-beta-3",
     "rimraf": "^2.4.4",
+    "sinon": "^1.17.2",
     "webpack": "^1.12.6",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.5.0"
